--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
+    "sass": "^1.89.2",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
